crates/swc_ecma_parser/tests/errors/deferred-import-evaluation/too-many-args/input.js
import.defer('a', 'b', 'c');
